--- a/primer/exercises/vertical_rhythm/index.html
+++ b/primer/exercises/vertical_rhythm/index.html
@@ -3,10 +3,10 @@
   <head>
     <meta charset="UTF-8" />
     <title>Home</title>
-    <link rel="stylesheet" href="./css/bundle.css" />
+    <link rel="stylesheet" href="./src/css/bundle.css" />
   </head>
   <body>
     <div id="root"></div>
   </body>
-  <script type="module" src="./index.js"></script>
+  <script type="module" src="./src/js/index.js"></script>
 </html>
